Changed the way we print heads in pages and changed file names

--- a/usb-book/Makefile
+++ b/usb-book/Makefile
@@ -5,4 +5,4 @@ all: clean
 	pdflatex tesis.tex
 
 clean:
-	rm -f *.aux *.l* *.toc *.out *.blg *.bbl tesis.pdf
+	rm -f *.aux *.l* *.toc *.out *.blg *.bbl *-blx.bib *.run.xml tesis.pdf
